Add a JEE community section

--- a/index.html
+++ b/index.html
@@ -191,9 +191,26 @@
 <div class="container">
     <div class="row featurette">
         <div class="col-md-2 order-md-2 text-rigth">
-            <i class="fas fa-microchip text-info" style="font-size:100px;"></i>
+            <i class="fas fa-coffee text-primary" style="font-size:100px;"></i>
         </div>
         <div class="col-md-10 order-md-1">
+            <h2>JEE community.</h2>
+            <p>JEE is widely used at Systelab. Apart form the <a href="https://github.com/systelab/seed-jee">JEE Project Seed</a> and the <a href="https://github.com/systelab/seed-springboot">Spring Boot Project Seed</a>, at Systelab we are working hard in many other libraries and ideas based on Java.</p>
+            <ul>
+                <li><a href="https://github.com/systelab/identity">Identity</a> is a microservice to be used in the seed projects</a>.
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<hr class="featurette-divider m-3">
+<div class="container">
+    <div class="row featurette">
+        <div class="col-md-2 order-md-1 text-rigth">
+            <i class="fas fa-microchip text-info" style="font-size:100px;"></i>
+        </div>
+        <div class="col-md-10 order-md-2">
             <h2>C++ community.</h2>
             <p>As Instruments Manufacturers, there is a big interest in C++ related technologies in the back-end.</p>
             <p>Apart form the <a href="https://github.com/systelab/seed-cpp">C++ Project Seed</a> that help us quickly bootstrap our projects and dev environment, we are
@@ -214,10 +231,10 @@
 <hr class="featurette-divider m-3">
 <div class="container">
     <div class="row featurette">
-        <div class="col-md-2 order-md-1">
+        <div class="col-md-2 order-md-2">
             <i class="fab fa-phabricator" style="font-size:100px; color:green;"></i>
         </div>
-        <div class="col-md-10 order-md-2">
+        <div class="col-md-10 order-md-1">
             <h2>Automated Application Development community.</h2>
             <p>Automate the Software Development Life cycle to reduce maintenance costs, increase product quality, and improve project productivity is key to our business.</p>
             <p>Focus on instrumentation and integration when implementing your automated application development (<a
