--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                 maintenance costs, increase product quality, and improve project productivity.</p>
             <p>Apart form the defining an strategy for our internal projects, the community is leading a <a href="https://github.com/systelab/jama-api">Jama API</a> and a <a
                     href="https://github.com/systelab/jama-client">Jama Client</a> project in order to report the automatic test results.</p>
-            <p>We are also working in an <a href="https://github.com/systelab/allure-reporter">utility</a> to create test reports from the allure results.</p>
+            <p>We are also working in an <a href="https://github.com/systelab/allure-reporter">utility</a> to create test reports from the allure results and in a
+            <a href="https://github.com/systelab/openapi-reporter">utility</a> to generate documentation from an OpenAPI specification file.</p>
         </div>
     </div>
 </div>
